[package]
name = "lsph"
version = "0.1.0"
authors = ["Haozhan Shi <jackson21182@gmail.com>"]
edition = "2021"
description = "Learned Spatial HashMap"
license = "MIT"
readme = "README.md"

[dependencies]
num-traits = "0.2.2"
geohash = { path = "geohash" }
smallvec = "1.8.0"

[dev-dependencies]
rand = "0.8.5"
rand_hc = "0.3.1"
criterion = { version = "0.3.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
