[package]
name = "lsph"
version = "0.1.9"
authors = ["Haozhan Shi <jackson21182@gmail.com>"]
repository = "https://github.com/jackson211/lsph"
homepage = "https://github.com/jackson211/lsph"
documentation = "https://docs.rs/lsph"
edition = "2021"
description = "Learned Spatial HashMap"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["hash", "hashmap", "spatial", "index"]
categories = ["data-structures"]

[dependencies]
num-traits = "0.2.19"
smallvec = "1.15.1"

[dev-dependencies]
rand = "0.9.2"
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
