[package]
name = "lsph_demo"
version = "0.1.0"
edition = "2021"
description = "LSPH demonstration with real-world Melbourne geographic data"
authors = ["LSPH Contributors"]

[dependencies]
lsph = { path = "../.." }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
colored = "2.1"
clap = { version = "4.4", features = ["derive"] }
